make title field required on report form

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -467,6 +467,7 @@ place:
       name: name
       optional:
       attrs:
+        - key: required
         - key: placeholder
           value: _(Enter title)
         - key: size
