--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -591,7 +591,7 @@ place:
     pollution:
       label: _(Pollution)
       fields:
-        - name: type
+        - name: location_type
           type: radio_big_buttons
           prompt: _(Type of report)
           content: report_types
@@ -614,7 +614,7 @@ place:
     land_use:
       label: _(Land use)
       fields:
-        - name: type
+        - name: location_type
           type: radio_big_buttons
           prompt: _(Type of report)
           content: report_types
@@ -632,7 +632,7 @@ place:
     air_quality:
       label: _(Air quality)
       fields:
-        - name: type
+        - name: location_type
           type: radio_big_buttons
           prompt: _(Type of report)
           content: report_types
@@ -650,7 +650,7 @@ place:
     dog_watch:
       label: _(Dog watch)
       fields:
-        - name: type
+        - name: location_type
           type: radio_big_buttons
           prompt: _(Type of report)
           content: report_types
