add subit button to all categories

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -565,6 +565,26 @@ place:
           prompt: _(Your name)
           placeholder: _(Name)
           optional: true
+        - name: private-submitter_email
+          type: text
+          prompt: _(Your Email)
+          optional: true
+          sticky: true
+          attrs:
+            - key: placeholder
+              value: _(Receive email updates on your report)
+            - key: size
+              value: 30
+        - name: my_image
+          type: file
+          prompt: _(Image)
+          inputfile_label: _(Add an Image)
+          optional: true
+          attrs:
+            - key: accept
+              value: image/*
+        - type: submit
+          label: _(Put it on the map!)
     land_use:
       label: _(Land use)
       fields:
@@ -583,6 +603,26 @@ place:
           prompt: _(Your name)
           placeholder: _(Name)
           optional: true
+        - name: private-submitter_email
+          type: text
+          prompt: _(Your Email)
+          optional: true
+          sticky: true
+          attrs:
+            - key: placeholder
+              value: _(Receive email updates on your report)
+            - key: size
+              value: 30
+        - name: my_image
+          type: file
+          prompt: _(Image)
+          inputfile_label: _(Add an Image)
+          optional: true
+          attrs:
+            - key: accept
+              value: image/*
+        - type: submit
+          label: _(Put it on the map!)
     air_quality:
       label: _(Air quality)
       fields:
@@ -601,6 +641,26 @@ place:
           prompt: _(Your name)
           placeholder: _(Name)
           optional: true
+        - name: private-submitter_email
+          type: text
+          prompt: _(Your Email)
+          optional: true
+          sticky: true
+          attrs:
+            - key: placeholder
+              value: _(Receive email updates on your report)
+            - key: size
+              value: 30
+        - name: my_image
+          type: file
+          prompt: _(Image)
+          inputfile_label: _(Add an Image)
+          optional: true
+          attrs:
+            - key: accept
+              value: image/*
+        - type: submit
+          label: _(Put it on the map!)
     dog_watch:
       label: _(Dog watch)
       fields:
