--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -613,6 +613,26 @@ place:
           prompt: _(Your name)
           placeholder: _(Name)
           optional: true
+        - name: private-submitter_email
+          type: text
+          prompt: _(Your Email)
+          optional: true
+          sticky: true
+          attrs:
+            - key: placeholder
+              value: _(Receive email updates on your report)
+            - key: size
+              value: 30
+        - name: my_image
+          type: file
+          prompt: _(Image)
+          inputfile_label: _(Add an Image)
+          optional: true
+          attrs:
+            - key: accept
+              value: image/*
+        - type: submit
+          label: _(Put it on the map!)
     land_use:
       label: _(Land use)
       fields:
@@ -628,28 +648,31 @@ place:
           optional: false
         - name: submitter_name
           type: text
-          prompt: _(What's your idea?)
-          placeholder: _(Enter a title for your idea...)
-          optional: false
-        - name: description
-          type: textarea
-          prompt: _(Describe your idea below:)
-          placeholder: _(Description...)
-          optional: false
-    complaint:
-      name: location_type
-      value: complaint
-      label: _(Complaint)
-      fields:
-        - name: description
-          type: textarea
-          prompt: _(What's your complaint?)
-          placeholder: _(Description...)
-          optional: false
-    air_watch:
-      name: location_type
-      value: air_watch
-      label: _(Air watch)
+          prompt: _(Your name)
+          placeholder: _(Name)
+          optional: true
+        - name: private-submitter_email
+          type: text
+          prompt: _(Your Email)
+          optional: true
+          sticky: true
+          attrs:
+            - key: placeholder
+              value: _(Receive email updates on your report)
+            - key: size
+              value: 30
+        - name: my_image
+          type: file
+          prompt: _(Image)
+          inputfile_label: _(Add an Image)
+          optional: true
+          attrs:
+            - key: accept
+              value: image/*
+        - type: submit
+          label: _(Put it on the map!)
+    air_quality:
+      label: _(Air quality)
       fields:
         - name: location_type
           type: radio_big_buttons
@@ -666,6 +689,26 @@ place:
           prompt: _(Your name)
           placeholder: _(Name)
           optional: true
+        - name: private-submitter_email
+          type: text
+          prompt: _(Your Email)
+          optional: true
+          sticky: true
+          attrs:
+            - key: placeholder
+              value: _(Receive email updates on your report)
+            - key: size
+              value: 30
+        - name: my_image
+          type: file
+          prompt: _(Image)
+          inputfile_label: _(Add an Image)
+          optional: true
+          attrs:
+            - key: accept
+              value: image/*
+        - type: submit
+          label: _(Put it on the map!)
     dog_watch:
       label: _(Dog watch)
       fields:
