add stylized checkbox input type to form template

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -614,6 +614,11 @@ place:
           prompt: _(Type of report)
           content: report_types
           optional: false
+        - name: pollution_type
+          type: checkbox_big_buttons
+          prompt: _(Types of pollution)
+          content: pollution_types
+          optional: true
         - name: title
           type: text
           prompt: _(Pollution title)
