DRY up config.yml

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -601,8 +601,8 @@ place:
 
   #### begin dynamic form config ####
   #
-  #TODO: add checkbox functionality
   #TODO: maybe add an autocomplete
+  #TODO: DRY up this section
   categories:
     pollution:
       label: _(Pollution)
@@ -632,26 +632,6 @@ place:
           prompt: _(Your name)
           placeholder: _(Name)
           optional: true
-        - name: private-submitter_email
-          type: text
-          prompt: _(Your Email)
-          optional: true
-          sticky: true
-          attrs:
-            - key: placeholder
-              value: _(Receive email updates on your report)
-            - key: size
-              value: 30
-        - name: my_image
-          type: file
-          prompt: _(Image)
-          inputfile_label: _(Add an Image)
-          optional: true
-          attrs:
-            - key: accept
-              value: image/*
-        - type: submit
-          label: _(Put it on the map!)
     land_use:
       label: _(Land use)
       fields:
@@ -670,26 +650,6 @@ place:
           prompt: _(Your name)
           placeholder: _(Name)
           optional: true
-        - name: private-submitter_email
-          type: text
-          prompt: _(Your Email)
-          optional: true
-          sticky: true
-          attrs:
-            - key: placeholder
-              value: _(Receive email updates on your report)
-            - key: size
-              value: 30
-        - name: my_image
-          type: file
-          prompt: _(Image)
-          inputfile_label: _(Add an Image)
-          optional: true
-          attrs:
-            - key: accept
-              value: image/*
-        - type: submit
-          label: _(Put it on the map!)
     air_quality:
       label: _(Air quality)
       fields:
@@ -708,26 +668,6 @@ place:
           prompt: _(Your name)
           placeholder: _(Name)
           optional: true
-        - name: private-submitter_email
-          type: text
-          prompt: _(Your Email)
-          optional: true
-          sticky: true
-          attrs:
-            - key: placeholder
-              value: _(Receive email updates on your report)
-            - key: size
-              value: 30
-        - name: my_image
-          type: file
-          prompt: _(Image)
-          inputfile_label: _(Add an Image)
-          optional: true
-          attrs:
-            - key: accept
-              value: image/*
-        - type: submit
-          label: _(Put it on the map!)
     dog_watch:
       label: _(Dog watch)
       fields:
@@ -746,28 +686,8 @@ place:
           prompt: _(Your name)
           placeholder: _(Name)
           optional: true
-        - name: private-submitter_email
-          type: text
-          prompt: _(Your Email)
-          optional: true
-          sticky: true
-          attrs:
-            - key: placeholder
-              value: _(Receive email updates on your report)
-            - key: size
-              value: 30
-        - name: my_image
-          type: file
-          prompt: _(Image)
-          inputfile_label: _(Add an Image)
-          optional: true
-          attrs:
-            - key: accept
-              value: image/*
-        - type: submit
-          label: _(Put it on the map!)
 
-
+  # define shared form element content here
   dynamic_form_content:
     report_types:
       - label: _(Observation)
@@ -791,6 +711,29 @@ place:
         value: litter
       - label: _(Other)
         value: other
+
+  # define form elements that appear on every form here
+  common_form_elements:
+    - name: private-submitter_email
+      type: text
+      prompt: _(Your Email)
+      optional: true
+      sticky: true
+      attrs:
+        - key: placeholder
+          value: _(Receive email updates on your report)
+        - key: size
+          value: 30
+    - name: my_image
+      type: file
+      prompt: _(Image)
+      inputfile_label: _(Add an Image)
+      optional: true
+      attrs:
+        - key: accept
+          value: image/*
+    - type: submit
+      label: _(Put it on the map!)
 
   #### end dynamic form config ####
 
